# Lab4

./: CMakeLists.txt  README.md
.cache/clangd/index/: Array.h.19838E72D5CE930A.idx  Figure.h.9134CC533797CCB1.idx  FigureArray.cpp.BA50049021568E6C.idx  FigureArray.h.27DBAF9BA9F8F846.idx  FigureUtils.h.7506BC03D528994F.idx  Hexagon.h.4A7C1D7AA5CCA6DB.idx  Pentagon.cpp.5D2253E77DABC156.idx  Pentagon.h.9DE8CB143E9EDF23.idx  Point.h.DD379BA49EE150ED.idx  Rhombus.cpp.1B56599803CBD134.idx  Rhombus.h.A50A441D53653CB4.idx  Trapezoid.cpp.0ADF55DDC4DC8C5F.idx  Trapezoid.h.46D7D36957C3BF26.idx  main.cpp.87117E095A1394EB.idx  tests1.cpp.B1316FFBD0ED06F0.idx
include/: Array.h  Figure.h  FigureUtils.h  Hexagon.h  Pentagon.h  Point.h  Rhombus.h
test/: tests1.cpp
